--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "node": ">=4.6.0"
   },
   "devDependencies": {
+    "aframe": "^0.3.2",
     "browser-sync": "2.17.0",
     "del": "2.2.2",
     "event-stream": "3.3.4",
